[package]
name = "dns-watchdog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
shellexpand = "3.1"
ctrlc = "3.4"
dirs = "6.0.0"
chrono = "0.4.45"
libc = "0.2.186"
